[chore] 오늘의 상품 추천 마크업 수정

--- a/client/index.html
+++ b/client/index.html
@@ -300,125 +300,156 @@
     </section>
 
     <!-- 오늘의 상품 추천 -->
-    <section>
-      <div class="swiper-recommend-products">
-        <h2 class="a11yHidden">오늘의 상품 추천</h2>
-        <p class="recommend-products-sub">이 상품 어때요?</p>
-        <div class="swiper-wrapper">
-          <div class="swiper-slide products-container">
-            <ul>
-              <li><a href="/">
-                <figure class="product">
+    <section class="today-recommend-products">
+      <h2 class="a11yHidden">오늘의 상품 추천</h2>
+      <p class="recommend-products-sub">이 상품 어때요?</p>
+      <div class="swiper-container">
+        <div class="swiper-recommend-products">
+          <div class="swiper-wrapper recommend-products-wrapper">
+            <div class="swiper-slide recommend-products-slide">
+              <a href="/">
+                <div class="product-img-container">
                   <img src="./assets/thumbnail/product01.png" alt="탱탱쫄면 4개입" />
-                  <figcaption class="product-name">[풀무원] 탱탱쫄면 (4개입)</figcaption>
-                </figure>
-                <div class="product-price">4,980 원</div>
-              </a></li>
-              <li><a href="/">
-                <figure class="product">
+                </div>
+                <div class="product-info">
+                  <div class="product-name">[풀무원] 탱탱쫄면 (4개입)</div>
+                  <div class="product-price">4,980 원</div>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide recommend-products-slide">
+              <a href="/">
+                <div class="product-img-container">
                   <img src="./assets/thumbnail/product02.png" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
-                  <figcaption class="product-name">[온더바디] 죠르디 시카 자석 선쿠션</figcaption>
-                </figure>
-                <div class="product-price">32,500 원</div>
-              </a></li>
-              <li><a href="/">
-                <figure class="product">
+                </div>
+                <div class="product-info">
+                  <div class="product-name">[온더바디] 죠르디 시카 자석 선쿠션</div>
+                  <div class="product-price">32,500 원</div>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide recommend-products-slide">
+              <a href="/">
+                <div class="product-img-container">
                   <img src="./assets/thumbnail/product03.png" alt="밀키퀸 현미 4kg" />
-                  <figcaption class="product-name">유기농 밀키퀸 현미 4kg</figcaption>
-                </figure>
-                <div class="product-price">25,000 원</div>
-              </a></li>
-              <li><a href="/">
-                <figure class="product">
+                </div>
+                <div class="product-info">
+                  <div class="product-name">유기농 밀키퀸 현미 4kg</div>
+                  <div class="product-price">25,000 원</div>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide recommend-products-slide">
+              <a href="/">
+                <div class="product-img-container">
                   <img src="./assets/thumbnail/product04.png" alt="스프레이형과 기본형의 세탁세" />
-                  <figcaption class="product-name">[프로쉬] 베이비 세탁세</figcaption>
-                </figure>
-                <div class="product-price-info">
+                </div>
+                <div class="product-info">
+                  <div class="product-name">[프로쉬] 베이비 세탁세</div>
                   <span class="sale-rate">24%</span>
                   <span class="product-price">18,900 원</span>
-                  <span class="cost">24,000 원</span>
+                  <div class="cost">24,000 원</div>
                 </div>
-              </a></li>
-            </ul>
-          </div>
-          <div class="swiper-slide products-container">
-            <ul>
-              <li><a href="/">
-                <figure class="product">
+              </a>
+            </div>
+            <div class="swiper-slide recommend-products-slide">
+              <a href="/">
+                <div class="product-img-container">
                   <img src="./assets/thumbnail/product01.png" alt="탱탱쫄면 4개입" />
-                  <figcaption class="product-name">[풀무원] 탱탱쫄면 (4개입)</figcaption>
-                </figure>
-                <div class="product-price">4,980 원</div>
-              </a></li>
-              <li><a href="/">
-                <figure class="product">
-                  <img src="./assets/thumbnail/product02.png" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
-                  <figcaption class="product-name">[온더바디] 죠르디 시카 자석 선쿠션</figcaption>
-                </figure>
-                <div class="product-price">32,500 원</div>
-              </a></li>
-              <li><a href="/">
-                <figure class="product">
-                  <img src="./assets/thumbnail/product03.png" alt="밀키퀸 현미 4kg" />
-                  <figcaption class="product-name">유기농 밀키퀸 현미 4kg</figcaption>
-                </figure>
-                <div class="product-price">25,000 원</div>
-              </a></li>
-              <li><a href="/">
-                <figure class="product">
-                  <img src="./assets/thumbnail/product04.png" alt="스프레이형과 기본형의 세탁세" />
-                  <figcaption class="product-name">[프로쉬] 베이비 세탁세</figcaption>
-                </figure>
-                <div class="product-price-info">
-                  <span class="sale-rate">24%</span>
-                  <span class="product-price">18,900 원</span>
-                  <span class="cost">24,000 원</span>
                 </div>
-              </a></li>
-            </ul>
-          </div>
-          <div class="swiper-slide products-container">
-            <ul>
-              <li><a href="/">
-                <figure class="product">
+                <div class="product-info">
+                  <div class="product-name">[풀무원] 탱탱쫄면 (4개입)</div>
+                  <div class="product-price">4,980 원</div>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide recommend-products-slide">
+              <a href="/">
+                <div class="product-img-container">
+                  <img src="./assets/thumbnail/product02.png" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
+                </div>
+                <div class="product-info">
+                  <div class="product-name">[온더바디] 죠르디 시카 자석 선쿠션</div>
+                  <div class="product-price">32,500 원</div>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide recommend-products-slide">
+              <a href="/">
+                <div class="product-img-container">
+                  <img src="./assets/thumbnail/product03.png" alt="밀키퀸 현미 4kg" />
+                </div>
+                <div class="product-info">
+                  <div class="product-name">유기농 밀키퀸 현미 4kg</div>
+                  <div class="product-price">25,000 원</div>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide recommend-products-slide">
+              <a href="/">
+                <div class="product-img-container">
+                  <img src="./assets/thumbnail/product04.png" alt="스프레이형과 기본형의 세탁세" />
+                </div>
+                <div class="product-info">
+                  <div class="product-name">[프로쉬] 베이비 세탁세</div>
+                  <div class="sale-rate">24%</div>
+                  <div class="product-price">18,900 원</div>
+                  <div class="cost">24,000 원</div>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide recommend-products-slide">
+              <a href="/">
+                <div class="product-img-container">
                   <img src="./assets/thumbnail/product01.png" alt="탱탱쫄면 4개입" />
-                  <figcaption class="product-name">[풀무원] 탱탱쫄면 (4개입)</figcaption>
-                </figure>
-                <div class="product-price">4,980 원</div>
-              </a></li>
-              <li><a href="/">
-                <figure class="product">
-                  <img src="./assets/thumbnail/product02.png" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
-                  <figcaption class="product-name">[온더바디] 죠르디 시카 자석 선쿠션</figcaption>
-                </figure>
-                <div class="product-price">32,500 원</div>
-              </a></li>
-              <li><a href="/">
-                <figure class="product">
-                  <img src="./assets/thumbnail/product03.png" alt="밀키퀸 현미 4kg" />
-                  <figcaption class="product-name">유기농 밀키퀸 현미 4kg</figcaption>
-                </figure>
-                <div class="product-price">25,000 원</div>
-              </a></li>
-              <li><a href="/">
-                <figure class="product">
-                  <img src="./assets/thumbnail/product04.png" alt="스프레이형과 기본형의 세탁세" />
-                  <figcaption class="product-name">[프로쉬] 베이비 세탁세</figcaption>
-                </figure>
-                <div class="product-price-info">
-                  <span class="sale-rate">24%</span>
-                  <span class="product-price">18,900 원</span>
-                  <span class="cost">24,000 원</span>
                 </div>
-              </a></li>
-            </ul>
+                <div class="product-info">
+                  <div class="product-name">[풀무원] 탱탱쫄면 (4개입)</div>
+                  <div class="product-price">4,980 원</div>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide recommend-products-slide">
+              <a href="/">
+                <div class="product-img-container">
+                  <img src="./assets/thumbnail/product02.png" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
+                </div>
+                <div class="product-info">
+                  <div class="product-name">[온더바디] 죠르디 시카 자석 선쿠션</div>
+                  <div class="product-price">32,500 원</div>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide recommend-products-slide">
+              <a href="/">
+                <div class="product-img-container">
+                  <img src="./assets/thumbnail/product03.png" alt="밀키퀸 현미 4kg" />
+                </div>
+                <div class="product-info">
+                  <div class="product-name">유기농 밀키퀸 현미 4kg</div>
+                  <div class="product-price">25,000 원</div>
+                </div>
+              </a>
+            </div>
+            <div class="swiper-slide recommend-products-slide">
+              <a href="/">
+                <div class="product-img-container">
+                  <img src="./assets/thumbnail/product04.png" alt="스프레이형과 기본형의 세탁세" />
+                </div>
+                <div class="product-info">
+                  <div class="product-name">[프로쉬] 베이비 세탁세</div>
+                  <div class="sale-rate">24%</div>
+                  <div class="product-price">18,900 원</div>
+                  <div class="cost">24,000 원</div>
+                </div>
+              </a>
+            </div>
           </div>
+          <div class="swiper-button-prev recommend-products-prev"></div>
+          <div class="swiper-button-next recommend-products-next"></div>
         </div>
-        <div class="swiper-button-prev recommend-products-prev"></div>
-        <div class="swiper-button-next recommend-products-next"></div>
       </div>
     </section>
-
   </main>
 
 
