[chore] 상품후기 추천 수 및 정렬 버튼 레이아웃 작업  #15

--- a/client/page_productDetail.html
+++ b/client/page_productDetail.html
@@ -302,16 +302,18 @@
         <li>작성하신 후기는 확인 후 적립금이 지급됩니다.(영업일 기준 평균 1~2일 소요)</li>
       </ul>
     </section>
-    <div class="product-review-header">
+    <div class="count-n-sort">
       <p class="review-count">
         총 2개
       </p>
-      <button class="view-by-recommend">
-        추천순
-      </button>
-      <button class="view-by-recent">
-        최근 등록순
-      </button>
+      <div class="sort-btns">
+        <button class="view-by-recommend">
+          추천순
+        </button>
+        <button class="view-by-recent">
+          최근 등록순
+        </button>
+      </div>
     </div>
 
     <div class="product-review-notice">
@@ -421,7 +423,7 @@
     </button>     
   </div>  
   
-
+  </div>
 
 
 
