[chore] main에서 장바구니와 관련된 부분 마크업 #23

--- a/client/page_productDetail.html
+++ b/client/page_productDetail.html
@@ -365,19 +365,46 @@
                     </button>
                   </div>
                   <div>
-                    <span class="total_price">4,980원</span>
+                    <span class="total_price_1">4,980원</span>
                   </div>
                 </div>
               </div>
             </div>
           </dd>
         </dl>
-        <div>
-          <button class="like"></button>
-          <button class="alarm"></button>
-          <button class="push_cart"></button>
+
+        <div style="padding: 28px 0px;">
+          <div class="calc_total_price"> <!-- 총 상품금액 -->
+            <span>총 상품금액:</span>
+            <span class="total_price_2">4,980</span>
+            <span>원</span>
+          </div>
+          <div class="point"> <!-- 적립 -->
+            <div>
+              <span>적립</span>
+            </div>
+            <span>로그인 후, 적립 혜택 제공</span>
+          </div>
+        </div>
+        
+        <div class="button_related_cart">
+          <button class="like">
+            <svg width="56" height="56" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M38.9269 18.893C38.3269 18.2927 37.6146 17.8164 36.8305 17.4915C36.0465 17.1666 35.2061 16.9993 34.3574 16.9993C33.5086 16.9993 32.6682 17.1666 31.8842 17.4915C31.1001 17.8164 30.3878 18.2927 29.7879 18.893L27.9589 20.721L26.1319 18.893C24.9201 17.681 23.2765 16.9999 21.5626 16.9998C19.8487 16.9996 18.2049 17.6802 16.9929 18.892C15.7808 20.1038 15.0998 21.7474 15.0996 23.4613C15.0994 25.1752 15.7801 26.819 16.9919 28.031L18.8199 29.86L27.2519 38.294C27.4394 38.4815 27.6937 38.5868 27.9589 38.5868C28.224 38.5868 28.4783 38.4815 28.6659 38.294L37.0989 29.86L38.9269 28.032C39.5271 27.4321 40.0032 26.7198 40.328 25.9359C40.6528 25.1519 40.82 24.3116 40.82 23.463C40.82 22.6144 40.6528 21.7741 40.328 20.9902C40.0032 20.2062 39.5271 19.4939 38.9269 18.894V18.893Z" stroke="#5F0080" stroke-width="1.7" stroke-linecap="round"/>
+              <rect x="0.5" y="0.5" width="55" height="55" rx="3.5" stroke="#E1E1E1"/>
+            </svg>
+          </button>
+          <button class="alarm">
+            <svg width="56" height="56" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M24.249 35.875C24.249 36.8695 24.6441 37.8232 25.3473 38.5264C26.0505 39.2296 27.0042 39.6246 27.9986 39.6246C28.9931 39.6246 29.9468 39.2296 30.65 38.5264C31.3532 37.8232 31.7483 36.8695 31.7483 35.875" stroke="#E1E1E1" stroke-width="1.6"/>
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M39.2477 35.5803H16.75L16.7646 35.5465C16.8501 35.3946 17.2945 34.7545 18.0989 33.6239L18.9426 32.4426V24.9783C18.9426 19.9326 22.8104 15.8208 27.6512 15.6318L28 15.625C33.0018 15.625 37.0562 19.8123 37.0562 24.9783V32.4415L38.9766 35.1539C39.1712 35.4385 39.2624 35.5814 39.2489 35.5814L39.2477 35.5803Z" stroke="#E1E1E1" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+              <rect x="0.5" y="0.5" width="55" height="55" rx="3.5" stroke="#E1E1E1"/>
+            </svg>
+          </button>
+          <button class="push_cart">장바구니 담기</button>
         </div>
       </article>
+      
     </section> <!-- /product_information -->
   </main>
   
