--- a/client/page_productDetail.html
+++ b/client/page_productDetail.html
@@ -311,7 +311,7 @@
           추천순
         </button>
         <button class="view-by-recent">
-          최근 등록순
+          |  최근 등록순
         </button>
       </div>
     </div>
@@ -352,7 +352,6 @@
           </div>
       </div>
     </div>
-
     <div class="product-review-notice">
       <div class="notice-header">
         <span class="notice-badge">
@@ -361,29 +360,35 @@
         <button class="notice-title">상품 후기 적립금 정책 안내</button>
       </div> 
       <div class="notice-content">  
-        <p class="question">
+        <img class="quest-icon" src="./assets/icons/Icon/question.svg" alt=""/>
+        <div class="question">
+          <p>
             스티로폼 박스도 손상되어 있어 포장이 터져 엉망이네요
             환불 요청합니다.
-        </p>
-        <p class="answer">
-            안녕하세요. 칼리입니다. 
-            믿고 찾아주신 상품에 불편을 드려 정말 죄송합니다. 
-
-            더불어, 해당 게시판은 실시간으로 상담이 어려워 순차적으로 답변드리고 있는 관계로 신속하게 답변 드
-            리지 못하여 대단히 죄송합니다. 
-
-            다행히도 고객님의 불편하셧던 사항은 고객행복센터를 통해 안내 받으신 점 확인하였습니다. 
-
-            불편을 들려 정말 죄송할 따름이며, 고객님께 늘 신선하고 최상의 상품을 불편 없이 전달드리기 위해 최선
-            을 다하는 칼리가 되겠습니다. 
-
-            칼리 드림.
-        </p>
-        <p class="written-date">
-          2022. 11. 11
-        </p>
-      </div>
+          </p>
+        </div>
+        <img class="ans-icon" src="./assets/icons/Icon/answer.svg" alt=""/>
+        <div class="answer">
+          <p>
+            안녕하세요. 칼리입니다.</br>
+            믿고 찾아주신 상품에 불편을 드려 정말 죄송합니다.</br>
+             </br>
+            더불어, 해당 게시판은 실시간으로 상담이 어려워 순차적으로 답변드리고 있는 관계로 신속하게 답변 드리지 못하여 대단히 죄송합니다.</br> 
+            </br>
+            다행히도 고객님의 불편하셨던 사항은 고객행복센터를 통해 안내 받으신 점 확인하였습니다.</br> 
+            </br>
+            불편을 들려 정말 죄송할 따름이며, 고객님께 늘 신선하고 최상의 상품을 불편 없이 전달드리기 위해 최선을 다하는 칼리가 되겠습니다. </br>
+            </br>
+            칼리 드림.</br>
+            </br>
+          </p>
+          <p class="written-date">  
+            2022. 11. 11
+          </p> 
+        </div>
     </div>
+  </div>
+   
     
     <div class="product-review-content">
       <div>
@@ -426,7 +431,9 @@
       문의하기
     </button>     
   </div>  
-  
+    <div>
+
+    </div> 
   </div>
 
 
