[chore] 네비게이션바 마크업+css완료 #25

--- a/client/page_productDetail.html
+++ b/client/page_productDetail.html
@@ -288,6 +288,7 @@
 
   <main class="productDetail_main">
     <img class="product_image" src="assets/tangtang/detail_view.jpg">
+
     <section class="product_information">
       <article class="main_information">
         <div class="type_of_delivery">샛별배송</div>
@@ -404,13 +405,21 @@
           <button class="push_cart">장바구니 담기</button>
         </div>
       </article>
-      
+
     </section> <!-- /product_information -->
   </main>
   
+  <navigation class="product_navigation">
+    <button class="btn_product_description">상품설명</button>
+    <button class="btn_detail_information">상세정보</button>
+    <button class="btn_product_review">후기</button>
+    <button class="btn_product_inquiry">문의</button>
+  </navigation> <!-- /product_navigation -->
   
 </body>
 </html>
+
+
 
   <footer class="container">
     <section class="consumer_wrap">
