--- a/client/index.html
+++ b/client/index.html
@@ -288,168 +288,175 @@
   <main>
     <!-- main banner -->
     <section>
-      <div class="swiper-main-banner">
+      <div class="swiper_main_banner">
         <div class="swiper-wrapper">
           <div class="swiper-slide"><a href="/"><img src="./assets/banner/banner05.png" alt="이 주의 특가 한 눈에 보기 배너" /></a></div>
           <div class="swiper-slide"><a href="/"><img src="./assets/banner/banner01.png" alt="칼리 과일 가게 배너" /></a></div>
           <div class="swiper-slide"><a href="/"><img src="./assets/banner/banner02.png" alt="이 달의 카드 혜택 배너" /></a></div>
         </div>
-        <div class="swiper-button-prev main-banner-prev"></div>
-        <div class="swiper-button-next main-banner-next"></div>
+        <div class="swiper-button-prev main_banner_prev"></div>
+        <div class="swiper-button-next main_banner_next"></div>
       </div>
     </section>
 
     <!-- 오늘의 상품 추천 -->
-    <section class="today-recommend-products">
+    <section class="today_recommend_products">
       <h2 class="a11yHidden">오늘의 상품 추천</h2>
-      <p class="recommend-products-sub">이 상품 어때요?</p>
-      <div class="swiper-container">
-        <div class="swiper-recommend-products">
-          <div class="swiper-wrapper recommend-products-wrapper">
-            <div class="swiper-slide recommend-products-slide">
+      <p class="recommend_products_sub">이 상품 어때요?</p>
+      <div class="swiper_container">
+        <div class="swiper_recommend_products">
+          <div class="swiper-wrapper recommend_products_wrapper">
+            <div class="swiper-slide recommend_products_slide">
               <a href="/">
-                <div class="product-img-container">
+                <div class="product_img_container">
                   <img src="./assets/thumbnail/product01.png" alt="탱탱쫄면 4개입" />
                 </div>
-                <div class="product-info">
-                  <div class="product-name">[풀무원] 탱탱쫄면 (4개입)</div>
-                  <div class="product-price">4,980 원</div>
+                <div class="product_info">
+                  <div class="product_name">[풀무원] 탱탱쫄면 (4개입)</div>
+                  <div class="product_price">4,980 원</div>
                 </div>
               </a>
             </div>
-            <div class="swiper-slide recommend-products-slide">
+            <div class="swiper-slide recommend_products_slide">
               <a href="/">
-                <div class="product-img-container">
+                <div class="product_img_container">
                   <img src="./assets/thumbnail/product02.png" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
                 </div>
-                <div class="product-info">
-                  <div class="product-name">[온더바디] 죠르디 시카 자석 선쿠션</div>
-                  <div class="product-price">32,500 원</div>
+                <div class="product_info">
+                  <div class="product_name">[온더바디] 죠르디 시카 자석 선쿠션</div>
+                  <div class="product_price">32,500 원</div>
                 </div>
               </a>
             </div>
-            <div class="swiper-slide recommend-products-slide">
+            <div class="swiper-slide recommend_products_slide">
               <a href="/">
-                <div class="product-img-container">
+                <div class="product_img_container">
                   <img src="./assets/thumbnail/product03.png" alt="밀키퀸 현미 4kg" />
                 </div>
-                <div class="product-info">
-                  <div class="product-name">유기농 밀키퀸 현미 4kg</div>
-                  <div class="product-price">25,000 원</div>
+                <div class="product_info">
+                  <div class="product_name">유기농 밀키퀸 현미 4kg</div>
+                  <div class="product_price">25,000 원</div>
                 </div>
               </a>
             </div>
-            <div class="swiper-slide recommend-products-slide">
+            <div class="swiper-slide recommend_products_slide">
               <a href="/">
-                <div class="product-img-container">
+                <div class="product_img_container">
                   <img src="./assets/thumbnail/product04.png" alt="스프레이형과 기본형의 세탁세" />
                 </div>
-                <div class="product-info">
-                  <div class="product-name">[프로쉬] 베이비 세탁세</div>
-                  <span class="sale-rate">24%</span>
-                  <span class="product-price">18,900 원</span>
+                <div class="product_info">
+                  <div class="product_name">[프로쉬] 베이비 세탁세</div>
+                  <span class="sale_rate">24%</span>
+                  <span class="product_price">18,900 원</span>
                   <div class="cost">24,000 원</div>
                 </div>
               </a>
             </div>
-            <div class="swiper-slide recommend-products-slide">
+            <div class="swiper-slide recommend_products_slide">
               <a href="/">
-                <div class="product-img-container">
+                <div class="product_img_container">
                   <img src="./assets/thumbnail/product01.png" alt="탱탱쫄면 4개입" />
                 </div>
-                <div class="product-info">
-                  <div class="product-name">[풀무원] 탱탱쫄면 (4개입)</div>
-                  <div class="product-price">4,980 원</div>
+                <div class="product_info">
+                  <div class="product_name">[풀무원] 탱탱쫄면 (4개입)</div>
+                  <div class="product_price">4,980 원</div>
                 </div>
               </a>
             </div>
-            <div class="swiper-slide recommend-products-slide">
+            <div class="swiper-slide recommend_products_slide">
               <a href="/">
-                <div class="product-img-container">
+                <div class="product_img_container">
                   <img src="./assets/thumbnail/product02.png" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
                 </div>
-                <div class="product-info">
-                  <div class="product-name">[온더바디] 죠르디 시카 자석 선쿠션</div>
-                  <div class="product-price">32,500 원</div>
+                <div class="product_info">
+                  <div class="product_name">[온더바디] 죠르디 시카 자석 선쿠션</div>
+                  <div class="product_price">32,500 원</div>
                 </div>
               </a>
             </div>
-            <div class="swiper-slide recommend-products-slide">
+            <div class="swiper-slide recommend_products_slide">
               <a href="/">
-                <div class="product-img-container">
+                <div class="product_img_container">
                   <img src="./assets/thumbnail/product03.png" alt="밀키퀸 현미 4kg" />
                 </div>
-                <div class="product-info">
-                  <div class="product-name">유기농 밀키퀸 현미 4kg</div>
-                  <div class="product-price">25,000 원</div>
+                <div class="product_info">
+                  <div class="product_name">유기농 밀키퀸 현미 4kg</div>
+                  <div class="product_price">25,000 원</div>
                 </div>
               </a>
             </div>
-            <div class="swiper-slide recommend-products-slide">
+            <div class="swiper-slide recommend_products_slide">
               <a href="/">
-                <div class="product-img-container">
+                <div class="product_img_container">
                   <img src="./assets/thumbnail/product04.png" alt="스프레이형과 기본형의 세탁세" />
                 </div>
-                <div class="product-info">
-                  <div class="product-name">[프로쉬] 베이비 세탁세</div>
-                  <div class="sale-rate">24%</div>
-                  <div class="product-price">18,900 원</div>
+                <div class="product_info">
+                  <div class="product_name">[프로쉬] 베이비 세탁세</div>
+                  <span class="sale_rate">24%</span>
+                  <span class="product_price">18,900 원</span>
                   <div class="cost">24,000 원</div>
                 </div>
               </a>
             </div>
-            <div class="swiper-slide recommend-products-slide">
+            <div class="swiper-slide recommend_products_slide">
               <a href="/">
-                <div class="product-img-container">
+                <div class="product_img_container">
                   <img src="./assets/thumbnail/product01.png" alt="탱탱쫄면 4개입" />
                 </div>
-                <div class="product-info">
-                  <div class="product-name">[풀무원] 탱탱쫄면 (4개입)</div>
-                  <div class="product-price">4,980 원</div>
+                <div class="product_info">
+                  <div class="product_name">[풀무원] 탱탱쫄면 (4개입)</div>
+                  <div class="product_price">4,980 원</div>
                 </div>
               </a>
             </div>
-            <div class="swiper-slide recommend-products-slide">
+            <div class="swiper-slide recommend_products_slide">
               <a href="/">
-                <div class="product-img-container">
+                <div class="product_img_container">
                   <img src="./assets/thumbnail/product02.png" alt="죠르디 캐릭터가 그려져 있는 선쿠션" />
                 </div>
-                <div class="product-info">
-                  <div class="product-name">[온더바디] 죠르디 시카 자석 선쿠션</div>
-                  <div class="product-price">32,500 원</div>
+                <div class="product_info">
+                  <div class="product_name">[온더바디] 죠르디 시카 자석 선쿠션</div>
+                  <div class="product_price">32,500 원</div>
                 </div>
               </a>
             </div>
-            <div class="swiper-slide recommend-products-slide">
+            <div class="swiper-slide recommend_products_slide">
               <a href="/">
-                <div class="product-img-container">
+                <div class="product_img_container">
                   <img src="./assets/thumbnail/product03.png" alt="밀키퀸 현미 4kg" />
                 </div>
-                <div class="product-info">
-                  <div class="product-name">유기농 밀키퀸 현미 4kg</div>
-                  <div class="product-price">25,000 원</div>
+                <div class="product_info">
+                  <div class="product_name">유기농 밀키퀸 현미 4kg</div>
+                  <div class="product_price">25,000 원</div>
                 </div>
               </a>
             </div>
-            <div class="swiper-slide recommend-products-slide">
+            <div class="swiper-slide recommend_products_slide">
               <a href="/">
-                <div class="product-img-container">
+                <div class="product_img_container">
                   <img src="./assets/thumbnail/product04.png" alt="스프레이형과 기본형의 세탁세" />
                 </div>
-                <div class="product-info">
-                  <div class="product-name">[프로쉬] 베이비 세탁세</div>
-                  <div class="sale-rate">24%</div>
-                  <div class="product-price">18,900 원</div>
+                <div class="product_info">
+                  <div class="product_name">[프로쉬] 베이비 세탁세</div>
+                  <span class="sale_rate">24%</span>
+                  <span class="product_price">18,900 원</span>
                   <div class="cost">24,000 원</div>
                 </div>
               </a>
             </div>
+            
           </div>
         </div>
-        <div class="swiper-button-prev recommend-products-prev"></div>
-        <div class="swiper-button-next recommend-products-next"></div>
+        <div class="swiper-button-prev recommend_products_prev"></div>
+        <div class="swiper-button-next recommend_products_next"></div>
       </div>
     </section>
+
+    <!-- sub banner -->
+    <div class="sub_banner">
+      <span class="sub_banner_title a11yHidden">더 풍성해진 10월의 퍼플위크</span>
+      <span class="sub_banner_text a11yHidden">적립률 UP + 3종 쿠폰팩</span>
+    </div>
   </main>
 
 
