--- a/client/index.html
+++ b/client/index.html
@@ -292,6 +292,7 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide"><a href="/"><img src="./assets/banner/banner05.png" alt="이 주의 특가 한 눈에 보기 배너" /></a></div>
           <div class="swiper-slide"><a href="/"><img src="./assets/banner/banner01.png" alt="칼리 과일 가게 배너" /></a></div>
+          <div class="swiper-slide"><a href="/"><img src="./assets/banner/banner03.png" alt="칼리 퍼플 위크 배너" /></a></div>
           <div class="swiper-slide"><a href="/"><img src="./assets/banner/banner02.png" alt="이 달의 카드 혜택 배너" /></a></div>
         </div>
         <div class="swiper-button-prev main_banner_prev"></div>
