--- a/client/login.html
+++ b/client/login.html
@@ -6,11 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/login.css" />
   <link rel="stylesheet" href="./css/common.css" />
+  
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="./js/main.js" type="module"></script>
-  <title>마켓칼리</title>
+  <title>로그인</title>
 </head>
 
 <body>
@@ -283,6 +284,47 @@
         배송안내
       </a>
     </article>
+  </section>
+
+  <section class="login_wrap">
+    <div class="login_box">
+      <h3>로그인</h3>
+
+      <form method="POST">
+        <fieldset>
+          <legend>아이디</legend>
+          <div class="idForm_group">
+            <div class="idInput">
+              <label for="id" class="a11yHidden">아이디</label>
+              <input id="id" class="id_input" type="text" required placeholder="아이디를 입력해주세요" name="id"/>
+            </div>
+          </div>
+        </fieldset>
+      </form>
+
+      <form method="POST">
+        <fieldset>
+          <legend>비밀번호</legend>
+          <div class="passwordForm_group">
+            <div class="passwordInput">
+              <label for="password" class="a11yHidden">아이디</label>
+              <input id="password" class="password_input" type="password" required placeholder="비밀번호를 입력해주세요" name="id"/>
+            </div>
+          </div>
+        </fieldset>
+      </form>
+
+      <span class="find_wrap">
+        <span class=""><a href="#">아이디 찾기</a></span>
+        <span class="">|</span>
+        <span class=""><a href="#">비밀번호 찾기</a></span>
+      </span>
+
+      <div class="loginButton_wrap">
+        <button class="login_btn">로그인</button>
+        <button class="register_btn">회원가입</button>
+      </div>
+    </div>
   </section>
 
   <footer class="container">
