[chore] Karly's Check Point 제목 마크업 + css #27

--- a/client/page_productDetail.html
+++ b/client/page_productDetail.html
@@ -431,7 +431,11 @@
     </article>
 
     <article class="product_check_point">
-
+      <h3>
+        <div class="check_point">
+          Kurly's Check Point
+        </div>
+      </h3>
     </article>
   </section>
 
