--- a/client/page_productDetail.html
+++ b/client/page_productDetail.html
@@ -327,7 +327,7 @@
           <img class="quest-icon" src="./assets/icons/Icon/question.svg" alt=""/>
           <div class="question">
             <p>
-              스티로폼 박스도 손상되어 있어 포장이 터져 엉망이네요
+              스티로폼 박스도 손상되어 있어 포장이 터져 엉망이네요</br>
               환불 요청합니다.
             </p>
           </div>
@@ -343,7 +343,7 @@
               </br>
               불편을 들려 정말 죄송할 따름이며, 고객님께 늘 신선하고 최상의 상품을 불편 없이 전달드리기 위해 최선을 다하는 칼리가 되겠습니다. </br>
               </br>
-              칼리 드림.</br>
+                칼리 드림.</br>
               </br>
             </p>
             <p class="written-date">  
@@ -363,7 +363,7 @@
         <img class="quest-icon" src="./assets/icons/Icon/question.svg" alt=""/>
         <div class="question">
           <p>
-            스티로폼 박스도 손상되어 있어 포장이 터져 엉망이네요
+            스티로폼 박스도 손상되어 있어 포장이 터져 엉망이네요</br>
             환불 요청합니다.
           </p>
         </div>
@@ -391,17 +391,19 @@
    
     
     <div class="product-review-content">
-      <div>
-        <p class="review-user">
+      <div class="user-info">
+        <p>
          <span class="is-best">베스트</span>
          <span class="membership-grade">퍼플</span>
          김*진    
         </p>
+      </div>
+      <div class="review-info">
         <p class="product-info">
           [풀무원] 탱탱쫄면(4개입)
         </p>
-        <p>
-          너무 맛있어여~
+        <p class="written-review">
+          너무 맛있어여~</br>
           면이 쫄깃하고 양념도 짱맛나요!!
         </p>
         <p class="written-date">
@@ -409,7 +411,47 @@
         </p>
       </div>
     </div>
-    
+    <div class="product-review-content">
+      <div class="user-info">
+        <p>
+         <span class="is-best">베스트</span>
+         <span class="membership-grade">퍼플</span>
+         김*진    
+        </p>
+      </div>
+      <div class="review-info">
+        <p class="product-info">
+          [풀무원] 탱탱쫄면(4개입)
+        </p>
+        <p class="written-review">
+          또 주문할 것 같습니다.</br>
+          너무 맛있어요 내스타일이야~!
+        </p>
+        <p class="written-date">
+          2022. 11. 10
+        </p>
+      </div>
+    </div>   <div class="product-review-content">
+      <div class="user-info">
+        <p>
+         <span class="is-best">베스트</span>
+         <span class="membership-grade">퍼플</span>
+         김*범    
+        </p>
+      </div>
+      <div class="review-info">
+        <p class="product-info">
+          [풀무원] 탱탱쫄면(4개입)
+        </p>
+        <p class="written-review">
+          너무 맛있어여~</br>
+          면이 쫄깃하고 양념도 짱맛나요!!
+        </p>
+        <p class="written-date">
+          2022. 11. 10
+        </p>
+      </div>
+    </div>
     <div class="prev-next-btn">
       <button class="prev">prev</button>
       <button class="next">next</button>
@@ -417,24 +459,7 @@
 
   </div>
 
-
-
-
-
-
-  <!-- 상품 문의 -->
-  <div class="product-inquiry-wrapper">
-    <h2>
-      상품문의
-    </h2>
-    <button class="write-btn">
-      문의하기
-    </button>     
-  </div>  
-    <div>
-
-    </div> 
-  </div>
+  <!--상품 문의  -->
 
 
   <!-- 푸 터 -->
