[chore] Karly's Check Point 내용 부분 마크업+css #27

--- a/client/page_productDetail.html
+++ b/client/page_productDetail.html
@@ -429,16 +429,17 @@
         </p>
       </div>
     </article>
-
     <article class="product_check_point">
       <h3>
-        <div class="check_point">
-          Kurly's Check Point
-        </div>
+        <div class="check_point_title">Kurly's Check Point</div>
       </h3>
+      <div class="check_point_img">
+        <img src="assets/icons/detail_miyoung/check_point.svg">
+      </div>
     </article>
   </section>
 
+  
 </body>
 </html>
 
